--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,37 +2,25 @@
 <html>
 <body>
 
-<!-- Book Image That is Moving -->
-<marquee behavior="alternate" direction="left">		
-    <img src="https://imageio.forbes.com/specials-images/imageserve/5f85be4ed0acaafe77436710/0x0.jpg?format=jpg&width=1200" alt = "Book Image" width="150" height="90">
-</marquee>
+<p><b>Nama: </b>{{ nama }}</p>
+<p><b>Kelas: </b>{{ kelas }}</p>
+<p><b>Aplikasi: </b>{{ aplikasi }}</p>
 
-<!-- Header -->
+<!-- Header Application -->
 <h1> <font color = green> airlib's Book Page</font> </h1>
-<p> <b>Embrace the World of Books with Us!</b> </p>
 
 <!-- List of Books -->
 <h3>Our List of Books:</h3>
 <ol type = "1">
         {% for book in books %}
-        <li>
-        <div class="myBooks">
-            <p class="name"><b>Name of Books: </b> {{ book.name }} </p>
-            <p class="amount"><b>Amount of Books: </b> {{ book.amount }} </p>
-            <p class="price"><b>Price: </b> {{ book.price }} </p>
-            <p class="description"><b>Description: </b> {{ book.description }} </p>
-        </div>
-        </li>
+        <li> <div>
+            <p><b>Name of Books: </b> {{ book.name }} </p>
+            <p><b>Amount of Books: </b> {{ book.amount }} </p>
+            <p><b>Price ($): </b> {{ book.price }} </p>
+            <p><b>Description: </b> {{ book.description }} </p>
+        </div> </li>
         {% endfor %}
 </ol>
-
-<!-- Contact Information -->
-<h3>Contact Us Here:</h3>
-<p>Email: airlib@cs.ui.ac.id</p>
-<p>Phone: (+62) 123-4567</p>
-
-<br> </br>
-<p><b>Novrizal Airsyahputra</b> (2206081780) PBP-A </p>
 
 </body>
 </html>
