TUGAS 3 BONUS DONE

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -10,6 +10,8 @@
 <!-- Header Application -->
 <h1> <font color = green> airlib's Book Page</font> </h1>
 
+<p> Kamu telah menambahkan {{ counting }} items pada airlib! </p>
+
 <!-- List of Books -->
 <h3>Our List of Books:</h3>
 
@@ -17,7 +19,7 @@
     <tr>
         <th>Name</th>
         <th>Amount</th>
-        <th>Price</th>
+        <th>Price ($)</th>
         <th>Description</th>
     </tr>
 
