PBP TUGAS 5 DONE

--- a/main/templates/create_item.html
+++ b/main/templates/create_item.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+
+<style>
+h1 {
+    color: #0a5f38; 
+    background-color: #6c9f88; 
+    padding: 10px; 
+    text-align: center; 
+} 
+</style>
+
+
 <h1>Add New Item</h1>
 
 <form method="POST">
