--- a/main/templates/edit_item.html
+++ b/main/templates/edit_item.html
@@ -11,6 +11,19 @@
         padding: 10px; 
         text-align: center; 
     } 
+
+    .btn.edit-item-btn {
+    background-color: #0a5f38;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    }
+
+    .btn.edit-item-btn:hover {
+    background-color: #0a5f38;
+    }
 </style>
 
 <h1>Edit Item</h1>
@@ -22,7 +35,7 @@
         <tr>
             <td></td>
             <td>
-                <input type="submit" value="Edit Item"/>
+                <input class="btn edit-item-btn" type="submit" value="Edit Item"/>
             </td>
         </tr>
     </table>
